removing unnecessary files
removing unnecessary files

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Project Title</title>
+  <title>Vitor Assuena</title>
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
   <link href="css/frame.css" media="screen" rel="stylesheet" type="text/css" />
   <link href="css/controls.css" media="screen" rel="stylesheet" type="text/css" />
@@ -47,7 +47,7 @@
         </div>
         <div class="flex-row">
           <div class="flex-item flex-item-stretch flex-column">
-            <a class="highlight-text" href="goals-tracker.html">Goals Tracker><img class="image max-width-400" src="img/great.png"></a>
+            <a class="highlight-text" href="goals-tracker.html"><img class="image max-width-400" src="img/great.png"></a>
           </div>
           <div class="flex-item flex-item-stretch-4 flex-column">
             <p class="text">
@@ -63,9 +63,7 @@
           <div class="flex-item flex-item-stretch-4 flex-column">
             <p class="text">
               <a class="highlight-text" href="planning-overhaul.html">Vehicle Planning Overhaul</a><br>
-              Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel
-              augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget
-              condimentum rhoncus, sem quam semper libero, sit amet.
+              By leveraging Python's flexibility and powerful libraries, it was possible to successfully transform our company's vehicle planning process. The automated solution not only saved valuable time for analysts but also improved accuracy and scalability.
             </p>
           </div>
         </div>
@@ -76,9 +74,7 @@
           <div class="flex-item flex-item-stretch-4 flex-column">
             <p class="text">
               <a class="highlight-text" href="kpi-tree.html">KPI Tree - Input Metrics (Machine Learning)</a><br>
-              Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel
-              augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget
-              condimentum rhoncus, sem quam semper libero, sit amet.
+              In today's data-driven business landscape, understanding the key drivers behind a company's success is paramount. Key Performance Indicators (KPIs) play a pivotal role in assessing the performance of an organization, enabling managers to make informed decisions and drive improvements. 
             </p>
           </div>
         </div>
