--- a/cv.html
+++ b/cv.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Project Title</title>
+  <title>Vitor Assuena - CV</title>
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
   <link href="css/frame.css" media="screen" rel="stylesheet" type="text/css" />
   <link href="css/controls.css" media="screen" rel="stylesheet" type="text/css" />
@@ -11,6 +11,7 @@
   <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <script src="js/menu.js"></script>
   <style>
     .menu-index {
@@ -44,20 +45,11 @@
   <div class="menu-container"></div>
   <div class="content-container">
     <div class="content">
-      <div class="content-table flex-column">
-        <div class="flex-row">
-          <div class="flex-item flex-column">
-            <p class="text">
-              Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel
-              augue. Curabitur ullamcorper ultricies nisi.
-            </p>
-          </div>
-          <div class="flex-item flex-column">
-            <p class="text">
-              Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet.
-            </p>
-          </div>
-        </div>
+      <br>
+      <div class="alert alert-primary" role="alert">
+        <center><a href="https://www.linkedin.com/in/vitorassuena/" target="_blank" class="alert-link"><img src="/img/linkedin.png">You can also find me on LinkedIn</a>.</center>
+        
+      </div>
         <div class="flex-row">
           <body><object data="/file/cv.pdf" type="application/pdf" width="100%" height="1000px">
             <p>Unable to display PDF file. <a href="/file/cv.pdf">Download</a> instead.</p>
