--- a/kpi-tree.html
+++ b/kpi-tree.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
    <head>
-      <title>Vitor Assuena</title>
+      <title>KPI Tree - Vitor Assuena</title>
       <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
       <link href="css/frame.css" media="screen" rel="stylesheet" type="text/css" />
       <link href="css/controls.css" media="screen" rel="stylesheet" type="text/css" />
@@ -30,8 +30,8 @@
                <div class="flex-item flex-column">
                   <h2 class="add-top-margin-small">Leveraging Machine Learning to Uncover Critical Input Metrics for KPIs</h2>
                   <p class="text">
-                     In today's data-driven business landscape, understanding the key drivers behind a company's success is paramount. Key Performance Indicators (KPIs) play a pivotal role in assessing the performance of an organization, enabling managers to make informed decisions and drive improvements. However, identifying the input metrics that significantly influence these KPIs can be a challenging task. This is where machine learning comes to the rescue.                     <br>Tools:
-                     <span class="badge badge-pill badge-primary">Python</span> <span class="badge badge-pill badge-success">SQL</span> <span class="badge badge-pill badge-warning">Machine Learning</span>
+                     In today's data-driven business landscape, understanding the key drivers behind a company's success is paramount. Key Performance Indicators (KPIs) play a pivotal role in assessing the performance of an organization, enabling managers to make informed decisions and drive improvements. However, identifying the input metrics that significantly influence these KPIs can be a challenging task. This is where machine learning comes to the rescue.<br>Tools:
+                     <span class="badge badge-pill badge-primary">Python</span> <span class="badge badge-pill badge-success">SQL</span> <span class="badge badge-pill badge-secondary">Machine Learning</span>
                   </p>
                </div>
             </div>
