--- a/cv.html
+++ b/cv.html
@@ -52,7 +52,7 @@
       </div>
         <div class="flex-row">
           <body><object data="/file/cv.pdf" type="application/pdf" width="100%" height="1000px">
-            <p>Unable to display PDF file. <a href="/file/cv.pdf">Download</a> instead.</p>
+            <p>Unable to display PDF file. <a href="portfolio/file/cv.pdf">Download</a> instead.</p>
           </object></body>
           </div>
         </div>
