--- a/cv.html
+++ b/cv.html
@@ -51,7 +51,7 @@
         
       </div>
         <div class="flex-row">
-          <body><object data="/file/cv.pdf" type="application/pdf" width="100%" height="1000px">
+          <body><object data="portfolio/file/cv.pdf" type="application/pdf" width="100%" height="1000px">
             <p>Unable to display PDF file. <a href="portfolio/file/cv.pdf">Download</a> instead.</p>
           </object></body>
           </div>
