--- a/cv.html
+++ b/cv.html
@@ -47,12 +47,12 @@
     <div class="content">
       <br>
       <div class="alert alert-primary" role="alert">
-        <center><a href="https://www.linkedin.com/in/vitorassuena/" target="_blank" class="alert-link"><img src="/img/linkedin.png">You can also find me on LinkedIn</a>.</center>
+        <center><a href="https://www.linkedin.com/in/vitorassuena/" target="_blank" class="alert-link"><img src="/portfolio/img/linkedin.png">You can also find me on LinkedIn</a>.</center>
         
       </div>
         <div class="flex-row">
-          <body><object data="portfolio/file/cv.pdf" type="application/pdf" width="100%" height="1000px">
-            <p>Unable to display PDF file. <a href="portfolio/file/cv.pdf">Download</a> instead.</p>
+          <body><object data="/portfolio/file/cv.pdf" type="application/pdf" width="100%" height="1000px">
+            <p>Unable to display PDF file. <a href="/portfolio/file/cv.pdf">Download</a> instead.</p>
           </object></body>
           </div>
         </div>
