--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         <div class="flex-row">
           <div class="flex-item flex-column">
             <p class="text add-top-margin">
-              Senior Business Analyst working at Loggi, Brazil's logistics unicorn. Highly experienced in data analysis, KPI development (from concept to execution), working closely with different areas to make sure the metrics are aligned with the business goals.
+              Senior Business Analyst working at Loggi, Brazil's logistics unicorn. Highly experienced in <span class="text-bold">data analysis, KPI development (from concept to execution), working closely with different areas</span> to make sure the metrics are aligned with the business goals.
             </p>
-            <p>Solid SQL and Python knowledge for data analysis/modeling and experience with tools like Power BI, Looker, Kibana, Grafana, DBT and AWS Lambda.</p>
+            <p>Solid <span class="text-bold">SQL and Python</span> knowledge for data analysis/modeling and experience with tools like <span class="text-bold">Power BI, Looker, Kibana, Grafana, DBT and AWS Lambda.</span></p>
             <p>Bachelor degree in Materials Engineering (UNIFEI) and MBA in Data Science and Analytics in progress (USP). Certified Lean Six Sigma Green Belt.</p>
           </div>
         </div>
