--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <div class="flex-item flex-item-stretch-4 flex-column">
             <p class="text">
               <a class="highlight-text" href="planning-overhaul.html">Vehicle Planning Overhaul</a><br>
-              By leveraging Python's flexibility and powerful libraries, it was possible to successfully transform our company's vehicle planning process. The automated solution not only saved valuable time for analysts but also improved accuracy and scalability.
+              By leveraging Python's flexibility and powerful libraries, it was possible to successfully <span class="text-bold">transform our company's vehicle planning process.</span> The automated solution not only <span class="text-bold">saved valuable time for analysts but also improved accuracy and scalability.</span>
             </p>
           </div>
         </div>
@@ -74,7 +74,7 @@
           <div class="flex-item flex-item-stretch-4 flex-column">
             <p class="text">
               <a class="highlight-text" href="kpi-tree.html">KPI Tree - Input Metrics (Machine Learning)</a><br>
-              In today's data-driven business landscape, understanding the key drivers behind a company's success is paramount. Key Performance Indicators (KPIs) play a pivotal role in assessing the performance of an organization, enabling managers to make informed decisions and drive improvements. 
+              In today's data-driven business landscape, understanding the key drivers behind a company's success is paramount. <span class="text-bold">KPIs play a pivotal role in assessing the performance of an organization, enabling managers to make informed decisions and drive improvements. </span>
             </p>
           </div>
         </div>
