--- a/goals-tracker.html
+++ b/goals-tracker.html
@@ -49,22 +49,21 @@
                <h2>Problem description</h2>
                <hr>
                <p class="text">
-                  Managing and monitoring corporate and business unit goals across different departments and teams can be a challenging task. Disparate systems and lack of visibility often hinder collaboration and alignment. Organizations face the problem of scattered Key Performance Indicators (KPIs) residing in various places such as Google Sheets, Jira, Looker, and Databases. 
+                  Managing and monitoring corporate and business unit goals across different departments and teams can be a challenging task. Disparate systems and lack of visibility often hinder collaboration and alignment. <span class="text-bold">Organizations face the problem of scattered Key Performance Indicators (KPIs) residing in various places such as Google Sheets, Jira, Looker, and Databases. </span>
                </p>
                <p class="text text-center graph-title">
                   YTD Results and Bonus Calculator
                </p>
                <center><a href="https://vitorassuena-goals-tracker.streamlit.app/" target="_blank"><img class="image center max-width-400 add-top-margin-small" src="img/ytd-results.png"></a></center>
-               <p class="text">This fragmented setup makes it difficult for people to easily track and monitor goals. In order to address this issue, there is a need to ingest data from different sources, integrate them, and provide a centralized solution that offers real-time insights and engagement to drive goal attainment.</p>
+               <p class="text">This fragmented setup makes it difficult for people to easily track and monitor goals. In order to address this issue, there is a need to <span class="text-bold">ingest data from different sources, integrate them, and provide a centralized solution that offers real-time insights and engagement to drive goal attainment.</span></p>
             </div>
             <div class="flex-item flex-column">
                <h2>Key Results</h2>
                <hr>
                <ol>
-                  <li><p class="text add-top-margin">Centralizing Goal Information: The Goals Tracker project serves as a hub, consolidating all goal-related information from various sources into one centralized location. This eliminates the need for individuals to search through different platforms, fostering collaboration and coordination across the organization.</p></li>
-                  <li><p class="text add-top-margin">Enhancing Visibility and Engagement: With the Goals Tracker, employees gain visibility into the progress of goals that were previously scattered across multiple systems. They can access year-to-date and monthly views, staying informed and engaged in achieving the company's objectives.</p></li>
-                  <li><p class="text add-top-margin">Real-Time Performance Insights: The Goals Tracker project ingests data from different sources, integrates them, and provides real-time tracking of goal performance. This eliminates the challenge of manually collecting and consolidating data, empowering decision-makers to intervene and make timely course corrections, ensuring that the organization stays on track to achieve its targets.</p></li>
-                  <li><p class="text add-top-margin">Motivating with Bonus Multipliers: The Goals Tracker introduces a bonus multiplier system based on goal completion. By integrating data from various sources and providing a clear overview of goal progress, this feature incentivizes employees and fosters a results-oriented culture, encouraging them to actively work towards the goals and rewarding their contributions.</p></li>
+                  <li><p class="text add-top-margin"><span class="text-bold"><u>Centralizing Goal Information:</u></span> The Goals Tracker project serves as a hub, consolidating all goal-related information from various sources into one centralized location. <span class="text-bold">This eliminates the need for individuals to search through different platforms</span>, fostering collaboration and coordination across the organization.</p></li>
+                  <li><p class="text add-top-margin"><span class="text-bold"><u>Enhancing Visibility and Engagement:</u></span> With the Goals Tracker, employees gain visibility into the progress of goals that were previously scattered across multiple systems. They can access year-to-date and monthly views, staying informed and engaged in achieving the company's objectives.</p></li>
+                  <li><p class="text add-top-margin"><span class="text-bold"><u>Real-Time Performance Insights:</u></span> The Goals Tracker project ingests data from different sources, integrates them, and provides real-time tracking of goal performance. This eliminates the challenge of manually collecting and consolidating data, <span class="text-bold">empowering decision-makers to intervene and make timely course corrections, ensuring that the organization stays on track to achieve its targets.</span></p></li>
                </ol>
             </div>
             <div class="flex-row">
@@ -81,7 +80,7 @@
                   By ingesting data from various sources, integrating them, and providing a centralized solution, it eliminates the challenge of tracking goals across multiple platforms. The Goals Tracker enhances visibility, provides real-time insights, and introduces bonus multipliers, promoting collaboration, alignment, and a high-performance culture.
                 </p>
                 <p>
-                  Its successful implementation streamlines goal management and empowers organizations to achieve objectives efficiently. The Goals Tracker proves to be an invaluable asset for businesses striving for goal-driven success in the face of complex data fragmentation.
+                  Its successful implementation <span class="text-bold">streamlines goal management and empowers the company to achieve objectives efficiently.</span> The Goals Tracker proves to be an invaluable asset for businesses striving for goal-driven success in the face of complex data fragmentation.
                 </p>
   
               </div>
