--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         <div class="flex-row">
           <div class="flex-item flex-column">
             <p class="text add-top-margin">
-              Senior Business Analyst working at Loggi, Brazil's logistics unicorn. Highly experienced in <span class="text-bold">data analysis, KPI development (from concept to execution), working closely with different areas</span> to make sure the metrics are aligned with the business goals.
+              Senior Business Analyst working at Loggi, Brazil's logistics unicorn. Highly experienced in <span class="text-bold" style="color:#00509d">data analysis, KPI development (from concept to execution), working closely with different areas</span> to make sure the metrics are aligned with the business goals.
             </p>
-            <p>Solid <span class="text-bold">SQL and Python</span> knowledge for data analysis/modeling and experience with tools like <span class="text-bold">Power BI, Looker, Kibana, Grafana, DBT and AWS Lambda.</span></p>
-            <p>Bachelor degree in Materials Engineering (UNIFEI) and MBA in Data Science and Analytics in progress (USP). Certified Lean Six Sigma Green Belt.</p>
+            <p>Solid <span class="text-bold" style="color:#00509d">SQL and Python</span> knowledge for data analysis/modeling and experience with tools like <span class="text-bold" style="color:#00509d">Power BI, Looker, Kibana, Grafana, DBT and AWS Lambda.</span></p>
+            <p>Bachelor degree in <span class="text-bold" style="color:#00509d">Materials Engineering (UNIFEI)</span> and <span class="text-bold" style="color:#00509d">MBA (in progress) in Data Science and Analytics (USP).</span> Certified Lean Six Sigma Green Belt.</p>
           </div>
         </div>
         <!--End Intro-->
