--- a/kpi-tree.html
+++ b/kpi-tree.html
@@ -46,22 +46,22 @@
                <h2>Problem description</h2>
                <hr>
                <p class="text">
-                  Identifying the most important KPIs within a Business Unit (BU) and the broader company can be a complex task. This project leverages machine learning models to establish the significance of various KPIs and prioritize them accordingly. By gaining a deeper understanding of these KPIs, stakeholders can make informed decisions and allocate resources more effectively.
+                  Identifying the most important KPIs within a Business Unit (BU) and the broader company can be a complex task. This project leverages <span class="text-bold">machine learning models to establish the significance of various KPIs and prioritize them accordingly.</span> By gaining a deeper understanding of these KPIs, stakeholders can make informed decisions and allocate resources more effectively.
                <p class="text text-center graph-title">
                   
                </p>
                <img class="image center max-width-400 add-top-margin-small" src="img/kpi-tree.jpg">
-               <p class="text">Through KPI tree analysis and machine learning models, we gained valuable insights into the significance of different KPIs, enabling us to prioritize them for better decision-making.</p>
+               <p class="text">Through KPI tree analysis and machine learning models, <span class="text-bold">we gained valuable insights into the significance of different KPIs, enabling us to prioritize them for better decision-making.</span></p>
             </div>
             <div class="flex-item flex-column">
-               <h2>Key Results</h2>
+               <h2>Key Steps and Results</h2>
                <hr>
                <ol>
-                  <li><p class="text add-top-margin">Data Collection: Data related to various KPIs across the BU and company were collected, encompassing operational, financial, and customer-centric metrics. This comprehensive dataset served as the foundation for our analysis.</p></li>
-                  <li><p class="text add-top-margin">Exploratory Data Analysis: An in-depth analysis of the dataset revealed insights into the relationships between input metrics and the KPI. Data distributions, correlations, and outliers were examined to gain a comprehensive understanding of the data.</p></li>
-                  <li><p class="text add-top-margin">KPI Tree Analysis: A KPI tree was constructed, mapping the relationships between different KPIs. This hierarchical structure helped us visualize the dependencies and interactions among various metrics. By analyzing the tree, we gained insights into the KPIs that have the most significant impact on the overall performance of the BU and the company.</p></li>
-                  <li><p class="text add-top-margin">Model Building and Evaluation: A robust machine learning pipeline was constructed using SKLearn and PyCaret libraries. Different algorithms were tested, optimized through cross-validation and hyperparameter tuning. Model performance was evaluated using metrics such as the confusion matrix, AUC, precision, recall, and F1-score.</p></li>
-                  <li><p class="text add-top-margin">Decision-Making and Resource Allocation: By identifying and prioritizing the most important KPIs, we gained a better understanding of the key drivers behind our BU and company success. Armed with this knowledge, stakeholders and decision-makers can now allocate resources more effectively, focus on improving the critical areas, and make data-driven decisions that align with our long-term goals.</p></li>
+                  <li><p class="text add-top-margin"><span class="text-bold"><u>Data Collection:</u></span> Data related to various KPIs across the BU and company were collected, encompassing mostly operational and quality metrics. This comprehensive dataset served as the foundation for the analysis.</p></li>
+                  <li><p class="text add-top-margin"><span class="text-bold"><u>Exploratory Data Analysis:</u></span> An in-depth analysis of the dataset revealed <span class="text-bold">insights into the relationships between input metrics and the KPI.</span> Data distributions, correlations, and outliers were examined to gain a comprehensive understanding of the data.</p></li>
+                  <li><p class="text add-top-margin"><span class="text-bold"><u>KPI Tree Analysis:</u></span> A KPI tree was constructed, mapping the relationships between different KPIs. This hierarchical structure <span class="text-bold">helped us visualize the dependencies and interactions among various metrics.</span> By analyzing the tree, we gained insights into the KPIs that have the most significant impact on the overall performance of the BU and the company.</p></li>
+                  <li><p class="text add-top-margin"><span class="text-bold"><u>Model Building and Evaluation:</u></span> A robust machine learning pipeline was constructed using SKLearn and PyCaret libraries. Different algorithms were tested, optimized through cross-validation and hyperparameter tuning. Model performance was evaluated using metrics/tools such as the confusion matrix, AUC, precision, recall, and F1-score.</p></li>
+                  <li><p class="text add-top-margin"><span class="text-bold"><u>Decision-Making and Resource Allocation:</u></span> <span class="text-bold">By identifying and prioritizing the most important KPIs, we gained a better understanding of the key drivers behind our BU and company success.</span> Armed with this knowledge, stakeholders and decision-makers can now allocate resources more effectively, focus on improving the critical areas, and make data-driven decisions that align with our long-term goals.</p></li>
                </ol>
             </div>
             <div class="flex-row">
@@ -76,7 +76,7 @@
                   By leveraging the power of machine learning, organizations can make data-driven decisions and drive improvements in areas that truly matter. Projects like this offer a promising avenue for gaining a competitive edge in today's evolving business landscape.
                 </p>
                 <p>
-                  In summary, this project demonstrates the effectiveness of machine learning in identifying crucial input metrics for company KPIs. By employing SKLearn and PyCaret, meaningful insights were obtained, enabling stakeholders to allocate resources and devise strategies that contribute to overall success.
+                  <span class="text-bold">In summary, this project demonstrates the effectiveness of machine learning in identifying crucial input metrics for company KPIs. By employing SKLearn and PyCaret, meaningful insights were obtained, enabling stakeholders to allocate resources and devise strategies that contribute to overall success.</span>
                 </p>
   
               </div>
