--- a/planning-overhaul.html
+++ b/planning-overhaul.html
@@ -53,7 +53,7 @@
               The Vehicle Planning team faced a significant challenge in determining the optimal quantity and type of vehicles to allocate to each facility. This process consumed an entire day every week for each analyst, who manually analyzed historical data and client forecasts to create individual routes. 
             </p>
             <p>
-              With over 1,500 routes per week, this manual process was time-consuming and prone to errors. The team needed a solution that could automate the vehicle allocation process, account for various constraints, and seamlessly integrate with their internal transport planner system.
+              With over 1,500 routes per week, this manual process was time-consuming and prone to errors. The team needed a <span class="text-bold">solution that could automate the vehicle allocation process, account for various constraints, and seamlessly integrate with their internal transport planner system.</span>
             </p>
           </div>
         </div>
@@ -62,10 +62,10 @@
             <h2>Features</h2>
             <hr>
             <ol>
-              <li><p class="text add-top-margin">Data Ingestion: The project leveraged historical data from the company's database and client forecasts stored in spreadsheets. By automating the data ingestion process, analysts were relieved from manually extracting and organizing data.</p></li>
-              <li><p class="text add-top-margin">Calculation Engine: The script incorporated a robust calculation engine that determined the appropriate vehicle type and quantity for each facility. It considered multiple factors such as historical demand, client forecasts, facility-specific restrictions (e.g., vehicle type per facility), and day of the week requirements.</p></li>
-              <li><p class="text add-top-margin">Route Spreadsheet Generation: The Python project generated a comprehensive spreadsheet where each row represented a different route. This spreadsheet encompassed all the necessary details, including origin, destination, vehicle type, and quantity. The automated generation eliminated the need for analysts to manually create each route, saving significant time and reducing human errors.</p></li>
-              <li><p class="text add-top-margin">API Integration: The project seamlessly integrated with the company's internal transport planner system via an API. The generated route spreadsheet was automatically imported into the system, further streamlining the planning process. This integration eliminated the tedious task of manually inputting each route into the system, resulting in substantial time savings.</p></li>
+              <li><p class="text add-top-margin"><span class="text-bold"><u>Data Ingestion:</u></span> The project leveraged historical data from the company's database and client forecasts stored in spreadsheets. By automating the data ingestion process, <span class="text-bold">analysts were relieved from manually extracting and organizing data.</span></p></li>
+              <li><p class="text add-top-margin"><span class="text-bold"><u>Calculation Engine:</u></span> The script incorporated a robust calculation engine that determined the appropriate vehicle type and quantity for each facility. <span class="text-bold">It considered multiple factors such as historical demand, client forecasts, facility-specific restrictions (e.g., vehicle type per facility), and day of the week requirements.</span></p></li>
+              <li><p class="text add-top-margin"><span class="text-bold"><u>Route Spreadsheet Generation:</u></span> The Python project generated a comprehensive spreadsheet where <span class="text-bold">each row represented a different route.</span> This spreadsheet encompassed all the necessary details, including origin, destination, vehicle type, and quantity. The automated generation <span class="text-bold">eliminated the need for analysts to manually create each route,</span> saving significant time and reducing human errors.</p></li>
+              <li><p class="text add-top-margin"><span class="text-bold"><u>API Integration:</u></span> The project seamlessly integrated with the company's internal transport planner system via an API. The generated route spreadsheet was <span class="text-bold">automatically imported into the system,</span> further streamlining the planning process. This integration eliminated the tedious task of manually inputting each route into the system, resulting in <span class="text-bold">substantial time savings.</span></p></li>
             </ol>
 
           </div>
@@ -74,10 +74,10 @@
               <h2>Key Results</h2>
               <hr>
               <ol>
-                <li><p class="text add-top-margin">Time Savings: The automated solution saved over 6 hours weekly for each analyst, who previously dedicated their entire Friday to the vehicle planning process. This time could now be utilized for other value-added tasks, enhancing overall productivity.</p></li>
-                <li><p class="text add-top-margin">Increased Accuracy: By eliminating manual data manipulation and route creation, the project significantly reduced human errors. The automated calculation engine ensured consistent and accurate allocation of vehicles, optimizing the logistics operations.</p></li>
-                <li><p class="text add-top-margin">Scalability: The Python project successfully handled over 1,500 routes per week, accommodating the growing demands of the organization. As the company expanded, the solution remained scalable and adaptable to changing requirements.</p></li>
-                <li><p class="text add-top-margin">Streamlined Scenario Analysis: The Python project enabled effortless creation and analysis of different scenarios, optimizing vehicle allocation during peak demand. This streamlined process facilitated quick decision-making, ensuring efficient resource utilization and timely deliveries for clients.</p></li>
+                <li><p class="text add-top-margin"><span class="text-bold"><u>Time Savings:</u></span> The automated solution saved over 6 hours weekly for each analyst, who previously dedicated their entire Friday to the vehicle planning process. This time could now be utilized for other value-added tasks, enhancing overall productivity.</p></li>
+                <li><p class="text add-top-margin"><span class="text-bold"><u>Increased Accuracy:</u></span> By eliminating manual data manipulation and route creation, the project <span class="text-bold">significantly reduced human errors.</span> The automated calculation engine ensured consistent and accurate allocation of vehicles, optimizing the logistics operations.</p></li>
+                <li><p class="text add-top-margin"><span class="text-bold"><u>Scalability:</u></span> The Python project successfully handled over 1,500 routes per week, accommodating the growing demands of the organization. As the company expanded, the solution remained scalable and adaptable to changing requirements.</p></li>
+                <li><p class="text add-top-margin"><span class="text-bold"><u>Streamlined Scenario Analysis:</u></span> The Python project enabled <span class="text-bold">effortless creation and analysis of different scenarios</span> optimizing vehicle allocation during peak demand. This streamlined process facilitated quick decision-making, ensuring efficient resource utilization and timely deliveries for clients.</p></li>
               </ol>
             </div> 
           </div>    
@@ -89,7 +89,7 @@
                 By leveraging Python's flexibility and powerful libraries, this logistics unicorn successfully transformed its vehicle planning process. The automated solution not only saved valuable time for analysts but also improved accuracy and scalability.
               </p>
               <p>
-                By ingesting data, performing complex calculations, and generating route spreadsheets, the project streamlined operations and integrated seamlessly with the company's internal systems. With this successful implementation, the logistics unicorn can focus on further enhancing its services and meeting the ever-increasing demands of its clients.
+                By ingesting data, performing complex calculations, and generating route spreadsheets, the project <span class="text-bold">streamlined the planning operations and integrated seamlessly with the company's internal systems.</span> With this successful implementation, the logistics unicorn can focus on further enhancing its services and meeting the ever-increasing demands of its clients.
               </p>
             </div> 
           </div>                 
