--- a/cv.html
+++ b/cv.html
@@ -51,8 +51,8 @@
         
       </div>
         <div class="flex-row">
-          <body><object data="/cv.pdf" type="application/pdf" width="100%" height="1000px">
-            <p>Unable to display PDF file. <a href="/cv.pdf">Download</a> instead.</p>
+          <body><object data="/portfolio/cv.pdf" type="application/pdf" width="100%" height="1000px">
+            <p>Unable to display PDF file. <a href="/portfolio/cv.pdf">Download</a> instead.</p>
           </object></body>
           </div>
         </div>
