--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
         <div class="flex-row">
           <div class="flex-item flex-item-stretch flex-column">
-            <a class="highlight-text" href="input-metrics-ml.html"><img class="image max-width-400" src="img/ml.jpg"></a>
+            <a class="highlight-text" href="kpi-tree.html"><img class="image max-width-400" src="img/ml.jpg"></a>
           </div>
           <div class="flex-item flex-item-stretch-4 flex-column">
             <p class="text">
